# mini-1

./: .gitignore  README.md  pyproject.toml
configs/: default.yaml
outputs/efficientnet_b4/anger/image0027024/: result.json
outputs/efficientnet_b4/contempt/image0029039/: result.json
outputs/efficientnet_b4/disgust/image0038530/: result.json
outputs/efficientnet_b4/fear/image0030893/: result.json
outputs/efficientnet_b4/happy/ffhq_3588/: result.json
outputs/efficientnet_b4/neutral/ffhq_3848/: result.json
outputs/efficientnet_b4/sad/image0028520/: result.json
outputs/efficientnet_b4/surprise/image0034161/: result.json
outputs/resnet18/anger/image0027024/: result.json
outputs/resnet18/contempt/image0029039/: result.json
outputs/resnet18/disgust/image0038530/: result.json
outputs/resnet18/fear/image0030893/: result.json
outputs/resnet18/happy/ffhq_3588/: result.json
outputs/resnet18/neutral/ffhq_3848/: result.json
outputs/resnet18/sad/image0028520/: result.json
outputs/resnet18/surprise/image0034161/: result.json
outputs/resnet18/test_unseen/8/: result.json
scripts/: batch_demo.py  demo.py  eval_test_folder.py  evaluate.py  extract_landmarks.py  preprocess_dataset.py  train_classifier.py  train_xai.py
src/: __init__.py  pipeline.py  visualization.py
src/attention/: __init__.py  grad_eclip.py  region_parser.py
src/emotion/: __init__.py  baseline_resnet_cbam.py  cam_loss.py  convnext.py  dataset.py  efficientnet_b4.py  facs_masks.py  model.py  regnet.py  resnet18.py  train.py  xai_train.py
src/explainer/: __init__.py  prompt_builder.py  vlm_engine.py
src/face_detection/: __init__.py  au_extractor.py  detector.py
(+82 files in other folders)
